# timestamp-microservice

./: Cargo.toml  Shuttle.toml
.github/workflows/: rust.yml  shuttle.yml
src/: main.rs
