[package]
name = "timestamp-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.4", features = ["cors"] }
tower = { version = "0.4.13" }
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
