[package]
name = "timestamp-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.4", features = ["cors"] }
anyhow = "1.0.75"
axum = "0.6.18"
chrono = { version = "0.4.31", features = ["serde"] }
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
